--- a/package.json
+++ b/package.json
@@ -1,72 +1,101 @@
 {
-  "name": "stikerinbot",
-  "version": "1.1.2",
-  "description": "WhatsApp Bot Ringan",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "src": "src",
-    "plugins": "plugins"
-  },
-  "scripts": {
-    "start": "node index.js --self",
-    "test": "node test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ariffb25/stikerinbot.git"
-  },
-  "keywords": [
-    "whatsapp-bot"
-  ],
-  "author": "Ariffb",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ariffb25/stikerinbot/issues"
-  },
-  "homepage": "https://github.com/ariffb25/stikerinbot",
-  "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/baileys",
-    "awesome-phonenumber": "^2.54.0",
-    "axios": "^0.21.1",
-    "brainly-scraper-v2": "^2.0.3",
-    "canvacord": "^5.2.3",
-    "cfonts": "^2.9.3",
-    "chalk": "^4.1.1",
-    "cheerio": "^1.0.0-rc.10",
-    "emoji-api": "^1.0.2",
-    "express": "^4.17.1",
-    "file-type": "^16.5.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "g-i-s": "^2.1.6",
-    "google-it": "^1.6.2",
-    "got": "^11.8.2",
-    "human-readable": "^0.2.1",
-    "img2braille": "^1.0.1",
-    "jsbarcode": "^3.11.4",
-    "jsdom": "^16.6.0",
-    "knights-canvas": "^1.2.7",
-    "lodash": "^4.17.21",
-    "lowdb": "^2.1.0",
-    "moment-timezone": "^0.5.33",
-    "mongoose": "^6.0.11",
-    "node-fetch": "^2.6.1",
-    "node-gtts": "^2.0.2",
-    "node-webpmux": "^3.1.0",
-    "qrcode": "^1.4.4",
-    "qrcode-terminal": "^0.12.0",
-    "similarity": "^1.2.1",
-    "socket.io": "^4.1.3",
-    "syntax-error": "^1.4.0",
-    "terminal-image": "^2.0.0",
-    "translate-google-api": "^1.0.4",
-    "url-regex": "^5.0.0",
-    "wa-sticker-formatter": "^4.0.14",
-    "pet-pet-gif": "^1.0.9",
-    "node-tesseract-ocr": "^2.2.1",
-    "xmldom": "^0.6.0",
-    "yargs": "^17.0.1",
-    "yt-search": "^2.9.0"
-  }
+    "name": "Sad-Bot",
+    "version": "1.0.5",
+    "description": "Simple WhatsApp Bot ESM",
+    "main": "index.js",
+    "type": "module",
+    "directories": {
+        "lib": "lib",
+        "src": "src",
+        "plugins": "plugins"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "test": "node test.js",
+        "test2": "nodemon index.js"
+    },
+    "keywords": [
+        "termux-whatsapp-bot",
+        "whatsapp-bot",
+        "whatsapp",
+        "js-whatsapp",
+        "whatsapp",
+        "Games-wabot",
+        "wabot-aq",
+        "multi-device",
+        "MD",
+        "baileys-md"
+    ],
+    "homepage": "https://github.com/FahriAdison/Sad-Multi-Device",
+    "author": {
+        "name": "Papah-Chan"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/FahriAdison/Sad-Multi-Device.git"
+    },
+    "bugs": {
+        "url": "https://github.com/FahriAdison/Sad-Multi-Device/issues"
+    },
+    "license": "GPL-3.0-or-later",
+    "dependencies": {
+        "@adiwajshing/baileys": "^4.1.0",
+        "@bochilteam/scraper": "^2.0.0",
+        "@deepgram/sdk": "^1.3.1",
+        "@ibaraki-douji/pixivts": "^2.0.2",
+        "@vitalets/google-translate-api": "^8.0.0",
+        "acrcloud": "^1.4.0",
+        "awesome-phonenumber": "^2.68.0",
+        "axios": "^0.24.0",
+        "booru": "^2.5.6",
+        "brainly-scraper-v2": "^2.0.9",
+        "caliph-api": "^0.8.3",
+        "cfonts": "^2.10.0",
+        "chalk": "^5.0.0",
+        "cheerio": "^1.0.0-rc.10",
+        "child_process": "^1.0.2",
+        "colors": "1.4.0",
+        "deepai": "^1.0.21",
+        "dhn-api": "^1.1.3",
+        "didyoumean": "^1.2.2",
+        "express": "^4.17.2",
+        "file-type": "^17.1.1",
+        "fluent-ffmpeg": "^2.1.2",
+        "formdata-node": "^4.3.2",
+        "genshin": "^1.2.4",
+        "google-play-scraper": "^8.1.0",
+        "hmtai": "^2.0.10",
+        "human-readable": "^0.2.1",
+        "https": "^1.0.0",
+        "hxz-api": "^1.0.1",
+        "insta-fetcher": "^1.3.20",
+        "jimp": "^0.16.1",
+        "jsdom": "^19.0.0",
+        "knights-canvas": "^1.3.7-a",
+        "link-preview-js": "^2.1.13",
+        "lodash": "^4.17.21",
+        "lowdb": "^3.0.0",
+        "mime-types": "^2.1.34",
+        "moment-timezone": "^0.5.34",
+        "node-fetch": "^3.2.0",
+        "node-os-utils": "^1.3.6",
+        "node-webpmux": "^3.1.1",
+        "obfuscator": "^0.5.4",
+        "pdfkit": "^0.13.0",
+        "pino": "^7.8.0",
+        "qrcode": "^1.5.0",
+        "qrcode-terminal": "^0.12.0",
+        "readline": "^1.3.0",
+        "sagiri": "^3.1.1",
+        "shentai": "^2.0.3",
+        "similarity": "^1.2.1",
+        "syntax-error": "^1.4.0",
+        "tesseract.js": "^2.1.5",
+        "tiktok-scraper-ts": "^1.2.7",
+        "url-regex-safe": "^3.0.0",
+        "wa-sticker-formatter": "^4.3.2",
+        "xfarr-api": "^1.0.3",
+        "yargs": "^17.3.1",
+        "zs-extract": "^1.4.1"
+    }
 }
